<resources>
    <string name="app_name">AmiClient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="google_play_services_key">AIzaSyBYYLPA1JrY4XVhMFt9EUL6ZxAQ5gS4ngs</string>

    <!-- LogIn Texts -->
    <string name="AMI_text">ami</string>
    <string name="ident">Identificación</string>
    <string name="cel">Celular</string>
    <string name="ingresar">Ingresar</string>
    <string name="noreg">¿No esta registrado?</string>
    <string name="terminosycond">Acepto términos y</string>
    <string name="condiciones">condiciones</string>
    <string name="contactarcliente">Contactar servicio cliente</string>
    <string name="asesorcomercial">Asesor comercial</string>

    <!-- SendCode Texts -->
    <string name="Bienvenido">Bienvenido a <b>ami</b></string>
    <string name="Ingresarnum">Para empezar ingresa tu número</string>
    <string name="continuar">Continuar</string>

    <!-- Ingresar code Texts -->
    <string name="insertarCod">Ingresar código</string>
    <string name="listo">Listo</string>

    <!-- Bienvenida Texts -->
    <string name="bienvenidoperfil">Bienvenido.</string>
    <string name="preguntaservicio">¿Para quien desea realizar el servicio?</string>
    <string name="propio">Servicio propio</string>
    <string name="otros">Otra persona</string>

    <!-- En Mora Texts -->
    <string name="enmora">Este usuario presenta inconvenientes al ingresar, por favor comunicate con cartera.</string>

    <!-- Opciones Servicio Texts -->
    <string name="opcionesviewtitle">¿Cómo deseas realizar tu servicio?</string>
    <string name="ingresarinfo">Ingresar información del servicio</string>
    <string name="solicitarllamada">Solicitar llamada</string>
    <string name="llamardirectamente">Llamar directamente</string>

    <!-- Info Servicio Texts -->
    <string name="infoserv">Información del Servicio</string>
    <string name="motivo">Motivo de consulta</string>
    <string name="ciudad">Ciudad</string>
    <string name="telefono">Telefono</string>
    <string name="ubicacionactual">Ubicación actual</string>
    <string name="nuevadireccion">Nueva dirección</string>
    <string name="midireccion">Mi dirección</string>
    <string name="sintomas">Sintomas</string>
    <string name="benef">Beneficiarios</string>

    <!-- triage Texts -->
    <string name="recibimostu">Recibimos tu servicio estamos en el proceso de triage y asignación de tripulación medica</string>
    <string name="triage">Triage</string>
    <string name="consultar">Consultar</string>
    <string name="bajacomplejidad">Triage baja complejidad</string>
    <string name="tiempollegada">Tiempo estimado de llegada</string>

    <!-- Contactar servicio cliente -->
    <string name="contactoservicio">Agente/Operador center servicio médico</string>
    <string name="selciudad">Seleccionar ciudad</string>
    <string name="selbenef">Seleccionar beneficiario</string>

    <!-- MapView texts -->
    <string name="encamino">El movil va en camino a la Calle 84 # 56-98</string>
    <string name="llegadaprox">Llegada aproximada</string>
    <string name="min">En 45 min</string>

    <!-- Triage alta complejidad -->
    <string name="encaminoaltacomp">Recibimos tu solicitud, en el menor tiempo posible el móvil llegará</string>

    <!-- Datos de Perfil -->
    <string name="pnombre">Primer nombre :</string>
    <string name="snombre">Segundo nombre :</string>
    <string name="papellido">Primer apellido :</string>
    <string name="sapellido">Segundo apeliido :</string>
    <string name="tel">Teléfono :</string>
    <string name="mail">Correo electrónico :</string>
    <string name="ciud">Ciudad :</string>
    <string name="barrio">Barrio :</string>
    <string name="dir">Dirección :</string>
    <string name="benefi">Beneficiarios :</string>
    <string name="docum">Número de documento :</string>
    <string name="ref">Referencia :</string>
    <string name="eps">EPS :</string>

    <string name="editarnombre">Ingresar Nombre :</string>
    <string name="editartel">Ingresar Telefono :</string>
    <string name="editarmail">Ingresar E-mail :</string>
    <string name="editarciud">Ingresar Ciudad :</string>
    <string name="editardir">Ingresar Dirección :</string>
    <string name="editarbenef">Ingresar Información :</string>
    <string name="editardocum">Ingresar Número de Documento :</string>

    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <!-- Datos de Perfil -->
    <string name="calificar">Califica tu última experiencia</string>
    <string name="observ">Observaciones</string>
    <string name="enviar">Enviar</string>


    <!-- Terminos y Condiciones Popup Texts -->
    <string name="popupTitle">Terminos y Condiciones</string>
    <string name="popupPositivo">Si</string>
    <string name="popupNegativo">No</string>
    <string name="popupMsg">En este campo van los detalles de los terminos y condiciones.</string>

    <!-- Condigo Verificacion Texts -->
    <string name="nocode">Tocar para recibir un nuevo código de verificación.</string>

    <!-- Error texts -->

    <string name="campovacio">Este campo no puede estar vacio.</string>
    <string name="codigoincorrecto">El código ingresado no es el correcto. Vuelva a intentar.</string>


</resources>
