<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.marti.amiclient.ui.SendCodeUI"
    android:background="@color/colorPrimary"
    android:paddingStart="@dimen/layoutPadLeft"
    android:paddingEnd="@dimen/layoutPadRight"
    android:orientation="vertical"
    android:weightSum="3"
    android:clickable="true"
    android:focusable="true">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/title"
        android:layout_width="@dimen/logoWidth"
        android:layout_height="@dimen/logoHeight"
        android:layout_marginTop="@dimen/shortMargin"
        android:layout_weight="0.8"
        android:layout_gravity="center"
        android:src="@drawable/corazon_blanco_logo2"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">
    <TextView
        android:id="@+id/welcmtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/subTitleSize"
        />

    <TextView
        android:id="@+id/ingr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcmtext"
        android:text="@string/Ingresarnum"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/superSmallWordSize"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/numeroWrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextSize"
        style="@style/Widget.Design.TextInputLayout.CustomDesign"
        app:errorEnabled="true"
        app:hintEnabled="false"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/numero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cel"
            android:textColorHint="@color/white"
            android:background="@null"
            android:drawableStart="@drawable/icono_celular"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/continua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numeroWrapper"
        android:text="@string/continuar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/shortMargin"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.CustomButton"
        android:textAllCaps="false"
        />
    </RelativeLayout>

</LinearLayout>
