<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marti.amiclient.ui.ServiceOptionsUI"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="4"
    android:paddingStart="@dimen/padLeft"
    android:paddingEnd="@dimen/padRight"
    android:clickable="true"
    android:focusable="true">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcionesviewtitle"
        android:textSize="@dimen/mediumtitleSize"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin10dp"
        />

    <LinearLayout
        android:id="@+id/ingresarinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/infoservicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresarinfo"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            style="@style/CustomOptionsBoxes"
            android:paddingTop="@dimen/padTopMora"
            android:paddingBottom="@dimen/padTopMora"
            android:paddingStart="@dimen/margin15dp"
            android:paddingEnd="@dimen/margin5dp"
            android:textSize="@dimen/subTitleSize"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/solicitarllamada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:layout_gravity="center"

        >

        <TextView
            android:id="@+id/llamadasol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicitarllamada"
            style="@style/CustomOptionsBoxes"
            android:paddingTop="@dimen/padTopMora"
            android:paddingBottom="@dimen/padTopMora"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin15dp"
            android:paddingEnd="@dimen/margin5dp"
            android:textSize="@dimen/subTitleSize"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llamardirecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin5dp"

        >

        <TextView
            android:id="@+id/llamadadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/llamardirectamente"
            style="@style/CustomOptionsBoxes"
            android:paddingTop="@dimen/padTopMora"
            android:paddingBottom="@dimen/padTopMora"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin15dp"
            android:paddingEnd="@dimen/margin5dp"
            android:textSize="@dimen/subTitleSize"
            />

    </LinearLayout>

</LinearLayout>
