<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.marti.amiclient.ui.ServiceInfoUI"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="@dimen/padLeft"
    android:paddingEnd="@dimen/padRight"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoserv"
        android:textSize="@dimen/mediumtitleSize"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"

        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/benefWrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextSize"
        android:layout_marginTop="@dimen/margin20dp"
        style="@style/Widget.Design.TextInputLayout.CustomDesignWhite"
        app:errorEnabled="true"
        app:hintEnabled="false"
        android:paddingStart="@dimen/padLeft"
        android:paddingEnd="@dimen/padRight"

        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/beneficiarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/benef"
            android:textSize="@dimen/superSmallWordSize"
            android:background="@null"
            android:gravity="center_vertical"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/motivoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        style="@style/Widget.Design.TextInputLayout.CustomDesignWhite"
        android:paddingStart="@dimen/padLeft"
        android:paddingEnd="@dimen/padRight"
        android:paddingTop="@dimen/padTop"
        android:paddingBottom="@dimen/padBottom"

        >

    </Spinner>

    <Spinner
        android:id="@+id/ciudadSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        style="@style/Widget.Design.TextInputLayout.CustomDesignWhite"
        android:paddingStart="@dimen/padLeft"
        android:paddingEnd="@dimen/padRight"
        android:paddingTop="@dimen/padTop"
        android:paddingBottom="@dimen/padBottom"

        >

    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/telefonoWrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextSize"
        android:layout_marginTop="@dimen/margin20dp"
        style="@style/Widget.Design.TextInputLayout.CustomDesignWhite"
        app:errorEnabled="true"
        app:hintEnabled="false"
        android:paddingStart="@dimen/padLeft"
        android:paddingEnd="@dimen/padRight"

        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telefono"
            android:textSize="@dimen/superSmallWordSize"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sintomasWrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextSize"
        android:layout_marginTop="@dimen/margin20dp"
        style="@style/Widget.Design.TextInputLayout.CustomDesignWhite"
        app:errorEnabled="true"
        app:hintEnabled="false"
        android:paddingStart="@dimen/padLeft"
        android:paddingEnd="@dimen/padRight"

        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sintomas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sintomas"
            android:textSize="@dimen/superSmallWordSize"
            android:background="@null"
            android:gravity="center_vertical"
            />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin15dp"
        android:layout_marginTop="@dimen/margin15dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ubicacionactual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin5dp"
            android:layout_marginEnd="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin40dp"
                android:text="@string/ubicacionactual"
                android:textSize="@dimen/superSmallWordSize"
                android:textAlignment="center"
                android:drawableStart="@drawable/icono_ubicacion"
                style="@style/CustomOptionsBoxes"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nuevadireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin40dp"
                android:text="@string/nuevadireccion"
                android:textAlignment="center"
                android:textSize="@dimen/superSmallWordSize"
                android:gravity="center_vertical"
                style="@style/CustomOptionsBoxes"
                android:paddingStart="@dimen/margin5dp"
                android:paddingEnd="@dimen/margin5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/midireccionWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin20dp"
        android:layout_gravity="center"
        style="@style/CustomOptionsBoxes"
        android:paddingTop="4dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/imageubic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icono_ubicacion"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/imageubic"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/midireccion"
                    android:paddingStart="@dimen/margin5dp"
                    android:paddingEnd="@dimen/margin5dp"
                    android:textSize="@dimen/superSmallWordSize"
                    />


                <EditText
                    android:id="@+id/midireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Carrera 44 Calle 65"
                    android:paddingStart="@dimen/margin5dp"
                    android:paddingEnd="@dimen/margin5dp"
                    android:textSize="@dimen/superSmallWordSize"
                    />


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/continua"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.CustomButtonRed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_marginBottom="@dimen/margin20dp"
        android:text="@string/continuar"
        android:textAllCaps="false"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
